# quantum_cryptography

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs
backend/src/middleware/: mod.rs
backend/src/routes/: health.rs
docs/: architecture.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/health/: HealthCheck.tsx
frontend/src/components/layout/: BottomNav.tsx  Footer.tsx  Navbar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
